web-kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: web
  type: LoadBalancer
